src/test/compile-fail/reserved-be.rs
fn main() {
    let be = 0;
    //~^ ERROR `be` is a reserved keyword
}